# bigganbondhu

./: .env.example  .gitignore  DEPLOYMENT.md  GITHUB-ACTIONS.md  Makefile  README.md  VM-SETUP.md  docker-compose.yml  manual-deploy.sh  server-monitor.sh  vm-setup.sh
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/webmodel/: dna_replication_model.glb
backend/data/experiments/: biology.json  biology_new.json  chemicals.json  chemistry.json  physics.json  reactions.json
frontend/bigganbondhu/: .env.production  API-CONFIGURATION.md  DEPLOYMENT-CONFIGURATION.md  Dockerfile  RESPONSIVE-DESIGN-IMPROVEMENTS.md  RESPONSIVE-FIXES.md  build.sh  index.html  nginx.conf  package.json  tailwind.config.js  vercel.json  vite.config.ts  wrangler.toml
frontend/bigganbondhu/public/models/: cube.gltf
frontend/bigganbondhu/src/: App.tsx  main.tsx  provider.tsx
frontend/bigganbondhu/src/components/: AtomBuilder3D.tsx  AtomInfoPanel.tsx  MiniPeriodicTable.tsx  ParticlePalette.tsx  ResetButton.tsx  ViewToggles.tsx  navbar.tsx  primitives.ts  theme-switch.tsx
frontend/bigganbondhu/src/config/: apiConfig.ts  externalApiConfig.ts  site.ts
frontend/bigganbondhu/src/layouts/: default.tsx
frontend/bigganbondhu/src/lib/: dragTypes.ts
frontend/bigganbondhu/src/pages/: about.tsx  index.tsx  small-research.tsx  usage-guide.tsx
frontend/bigganbondhu/src/services/: apiService.ts
frontend/bigganbondhu/src/styles/: globals.css
(+60 files in other folders)
